# csv_validator

./: README.MD  pyproject.toml  requirements.txt  teste.txt
app/: main.py
app/data/: sales_data.csv
app/models/: sales_pandera_val.py
app/storage/: blob_storage.py
app/upload/: abstract_file.py  csv_file.py
app/utils/: generate_fake_csv.py
